# c-utils

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.org  build_and_run.sh  build_and_run_c.sh  build_and_run_unit_test.sh  configure.sh  configure_address_sanitizer.sh  configure_address_sanitizer_freebsd.sh  configure_c.sh  configure_cpp.sh  configure_unit_test.sh  configure_valgrind.sh  install-lib.sh  remove_all_cmake_build_folders.sh  run_address_sanitizer.sh  run_address_sanitizer_freebsd.sh  run_unit_test.sh  run_valgrind.sh
cmake/: CMakeLists.txt
cmake/unit_test/: CMakeLists.txt
cmake_memory_leak_checking/: CMakeLists.txt
cmake_unit_test/: CMakeLists.txt
src/: main.c  main.cpp  unit_test.c
src/test/unit/utils/: data_types_test.cpp  file_test.cpp  hex_buffer_test.cpp  string_test.cpp
src/test/unit/utils/collections/: single_link_list_test.cpp  vector_test.cpp
src/test/utils/: data_types_test.c  data_types_test.h  file_test.c  file_test.h  hex_buffer_test.c  hex_buffer_test.h  string_test.c  string_test.h
src/test/utils/collections/: single_link_list_test.cpp  vector_test.c  vector_test.cpp  vector_test.h
src/utils/: bits.h  data_types.h  data_types_test.cpp  file.c  file.h  file_test.cpp  heap_string.c  heap_string.h  hex_buffer.c  hex_buffer.h  hex_buffer_test.cpp  log.c  log.h  memory.c  memory.h  random.c  random.h  smart_ptr.h  str.c  str.h  string.c  string.h  string_test.cpp  timer.c  timer.h  vector.c  vector.h  vector_test.cpp
src/utils/collections/: README.md  README.org  single_link_list.c  single_link_list.h  single_link_list_test.cpp  stack.h  vector.c  vector.h  vector_test.cpp
use_c_compiler_to_run_main/: CMakeLists.txt
use_cpp_compiler_to_run_googletest/: CMakeLists.txt
